# PDFROUTER

./: .gitignore  DESIGN.md  README.md  TEST_GUIDE.md  batch_detect_toc.py  debug_mini_game.py  debug_pdf_pages.py  debug_report_toc.py  example.py  example_batch_processing.py  example_toc_detection.py  pyproject.toml  test_simple.py  test_single_pdf.py  test_toc_continuous_pages.py
pdf_router/: __init__.py  config.py  constants.py  v1_compat.py
pdf_router/adapters/: mineru_adapter.py  ray_adapter.py
pdf_router/api/: router_api.py  single_page_api.py  toc_api.py
pdf_router/core/: feature_extractor.py  mark_generator.py  rule_engine.py
pdf_router/utils/: io_utils.py  pdf_utils.py
tests/: test_batch_pdfs_to_json.py  test_config.py  test_mark_generator.py  test_real_pdf.py  test_router.py  test_router_all_pass.py  test_router_simple_v1_old.py  test_router_v1_old.py  test_rule_engine.py  test_single_page.py  test_toc_api.py
